# pytest-resilience-agent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  publish.yml  scorecard.yml
demo/: mock_lark.py  mock_truefoundry.py  run_demo.py  run_full_loop.py
demo/example_agent_tests/: test_summarise_resilience.py
demo/sample_agent/: app.py
demo/scenarios/: chaos_patterns.json
docs/: devpost_submission.md
docs/adr/: 0001-direction-reversal.md  0002-respx-as-injection-layer.md  0003-rule-based-generator.md
docs/screenshot/: render_demo_screenshot.py
scripts/: check_anti_ai_markers.py  check_text_style.py  smoke_live_integrations.py
src/pytest_resilience_agent/: __init__.py  chaos.py  cli.py  gateway.py  generator.py  lark_mcp.py  plugin.py  scenarios.py
tests/: conftest.py  test_chaos_scenarios.py  test_marker_and_fixtures.py  test_multi_turn_chaos.py  test_timeline_and_report.py
videos/: CREDITS.md  concat.txt  subtitles.ass  subtitles.srt
videos/slides/: make_slides.py
