[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "pytest-resilience-agent"
version = "0.2.0"
description = "pytest plugin that auto-generates resilience tests for LLM apps using Lark MCP and TrueFoundry AI Gateway"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mikhail Golikov", email = "golikovichev@gmail.com"},
]
keywords = ["pytest", "llm", "testing", "resilience", "mcp", "ai-gateway", "chaos-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "respx>=0.21",
    "rich>=13.0",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]

[project.optional-dependencies]
demo = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
dev = [
    "ruff>=0.6",
    "pre-commit>=3.7",
]

[project.urls]
Repository = "https://github.com/golikovichev/pytest-resilience-agent"
Issues = "https://github.com/golikovichev/pytest-resilience-agent/issues"

[project.entry-points.pytest11]
resilience_agent = "pytest_resilience_agent.plugin"

[project.scripts]
pytest-resilience-agent = "pytest_resilience_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_resilience_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
